force-app/main/default/objects/Import_Run__c/Import_Run__c.object-meta.xml
<CustomObject>
    <label>Import Run</label>
    <pluralLabel>Import Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Import Run Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>