force-app/main/default/objects/Import_Run__c/fields/Checksum_Status__c.field-meta.xml
<CustomField>
    <fullName>Checksum_Status__c</fullName>
    <label>Checksum Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>MATCHED</fullName>
            </value>
            <value>
                <fullName>MISMATCHED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>