force-app/main/default/objects/Import_Run__c/fields/Chunk_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Sequence__c</fullName>
    <label>Chunk Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>