force-app/main/default/objects/Import_Run__c/fields/Diagnostic_Message__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Message__c</fullName>
    <label>Diagnostic Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>