force-app/main/default/objects/Import_Run__c/fields/Economy_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Economy_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Economy Analysis</label>
    <referenceTo>Economy_Analysis__c</referenceTo>
    <relationshipLabel>Import Runs</relationshipLabel>
    <relationshipName>Import_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>