force-app/main/default/objects/Import_Run__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>