force-app/main/default/objects/Import_Run__c/fields/Rollup_Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Schema_Version__c</fullName>
    <label>Rollup Schema Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>