force-app/main/default/objects/Import_Run__c/fields/Save_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Save_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Save Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>