force-app/main/default/objects/Import_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RECEIVED</fullName>
                <default>true</default>
                <label>RECEIVED</label>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>VALIDATING</fullName>
            </value>
            <value>
                <fullName>PUBLISHED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>