force-app/main/default/objects/Import_Run__c/fields/Total_Chunks__c.field-meta.xml
<CustomField>
    <fullName>Total_Chunks__c</fullName>
    <label>Total Chunks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>