force-app/main/default/objects/Import_Run__c/fields/Total_Pop_Checksum__c.field-meta.xml
<CustomField>
    <fullName>Total_Pop_Checksum__c</fullName>
    <label>Total Pop Checksum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>